Added all consumers. Switched threads to virtual threads. Added Grafana to docker compose